--- a/bf2/index.html
+++ b/bf2/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/favicon.ico">
-    <title>Basic Fantasy</title>
+    <meta charset="UTF-8">
+    <title>Basic Fantasy Character Generator</title>
+    <link rel="icon" type="image/ico" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div id="app"></div>
