--- a/scala-js/index.html
+++ b/scala-js/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic Fantasy Character Generator</title>
+    <title>OnceWas RPG Character Generator</title>
     <link rel="icon" type="image/ico" href="img/favicon.ico">
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -11,7 +11,7 @@
 
 <table class="callout">
     <tr>
-        <td align="Right">
+        <td align="right">
             <h5>Name:</h5>
         </td>
         <td>
@@ -40,7 +40,6 @@
         <select id="character_class_select">
             <option value="Fighter" selected>Fighter</option>
             <option value="Magic-User">Magic-User</option>
-            <option value="Monk">Monk</option>
             <option value="Thief">Thief</option>
             <option value="Cleric">Cleric</option>
             <option value="Fighter/Magic-User">Fighter/Magic-User</option>
@@ -388,30 +387,6 @@
         </div>
     </div>
 
-    <div class="large-4 medium-4 cell" id="monk_skills_div">
-        <h5>Monk Skills</h5>
-        <div class="callout" id="monk_skills">
-            <table class="unstriped">
-                <tr>
-                    <td><strong>Move Silently:</strong></td>
-                    <td><span id="monkMoveSilently">0</span></td>
-                </tr>
-                <tr>
-                    <td><strong>Climb Walls:</strong></td>
-                    <td><span id="monkClimbWalls">0</span></td>
-                </tr>
-                <tr>
-                    <td><strong>Hide:</strong></td>
-                    <td><span id="monkHide">0</span></td>
-                </tr>
-                <tr>
-                    <td><strong>Listen:</strong></td>
-                    <td><span id="monkListen">0</span></td>
-                </tr>
-            </table>
-        </div>
-    </div>
-
     <div class="large-4 medium-4 cell" id="caster_spells_div">
         <h5>Spells per Level</h5>
         <div class="callout" id="spells_list">
@@ -441,12 +416,6 @@
                     <td><span id="sixth_level">0</span></td>
                 </tr>
             </table>
-        </div>
-    </div>
-
-    <div class="large-4 medium-4 cell" id="monk_powers_div">
-        <h5>Monk Powers</h5>
-        <textarea id="monk_powers" style="height: 290px;"></textarea>
         </div>
     </div>
 </div>
@@ -491,6 +460,6 @@
 </div>
 
 <!-- Include Scala.js compiled code -->
-<script type="text/javascript" src="./target/scala-2.13/basic-fantasy-character-generator-fastopt/main.js"></script>
+<script type="text/javascript" src="./target/scala-2.13/oncewas-rpg-character-generator-opt/main.js"></script>
 </body>
 </html>
